--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "5.2.0",
     "rxjs": "7.0.1",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "0.11.8"
   },
   "devDependencies": {
